--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -3,7 +3,7 @@
 #需配合主机名共同使用
 
 
-hostname = *.xiaoxiao*.com, *.rr.tv, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, owa.videoshowiosglobalserver.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com
+hostname = *.xiaoxiao*.com, *.rr.tv, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com
 
 #破解vip脚本
 # > 小小影视
@@ -26,9 +26,6 @@ http-response ^https:\/\/api\.meiyan\.com\/iap\/verify\.json requires-body=1,max
 
 # > 小影
 http-response ^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js,tag=小影
-
-# > videoshow
-http-response ^https:\/\/owa\.videoshowiosglobalserver\.com\/zone\/.+\/iosPayClient\/(payVerify|imeiVerify) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/langkhach270389/Scripting/master/videoshow.vip.js,script-update-interval=0,tag=videoshow
 
 # PicsArt美易 pro
 http-response ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js,tag=PicsArt美易
