--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -6,8 +6,8 @@
 hostname = *.xiaoxiao*.com, *.rr.tv, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com
 
 #破解vip脚本
-# > 小小影视
-http-response https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js,tag=小小影视
+# > 小小影视AD
+http-response https:\/\/.*\/getGlobalData requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Script/xxysad.js,tag=小小影视AD
 
 # > 人人视频-需旧版本app
 http-response ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/rrtv.js,tag=人人视频AI原画
@@ -63,10 +63,13 @@ http-response https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoo
 http-request ^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) script-path=https://Choler.github.io/Surge/Script/YouTube.js,tag=YouTube去广告
 
 # > 抖音 Remove Ad & Logo
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme/v1/aweme\/post\/ script-path=https://Choler.github.io/Surge/Script/douyin_post.js, requires-body=true, timeout=10, tag=douyin_post.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin_feed.js, requires-body=true, timeout=10, tag=douyin_feed.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/follow\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin_follow.js, requires-body=true, timeout=10, tag=douyin_follow.js
-http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/nearby\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin_nearby.js, requires-body=true, timeout=10, tag=douyin_nearby.js
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme/v1/aweme\/post\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_post
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_feed.js
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/follow\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_follow.js
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/nearby\/feed\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_nearby.js
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/search\/item\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_item
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/general\/search\/single\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_search
+http-response ^https?:\/\/aweme\.snssdk\.com\/aweme\/v1\/hot\/search\/video\/list\/ script-path=https://Choler.github.io/Surge/Script/douyin.js, requires-body=true, timeout=10, tag=抖音_hot
 
 # > 奈飞评分
 http-request ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D script-path=https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js,tag=奈飞评分1
