--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -6,8 +6,9 @@
 hostname = *.xiaoxiao*.com, *.rr.tv, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com
 
 #破解vip脚本
-# > 小小影视AD
+# > 小小影视
 http-response https:\/\/.*\/getGlobalData requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Script/xxysad.js,tag=小小影视AD
+http-response https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js,tag=小小影视VIP
 
 # > 人人视频-需旧版本app
 http-response ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/rrtv.js,tag=人人视频AI原画
