--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -19,33 +19,32 @@ cron "30 3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 cron "50 3 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
-# 首页 > 签到有礼
-# 首页 > 领取红包
-# 首页  > 天天低价
 cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
 
 # > 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
 #2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
+cron "30 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
-cron "10 4 0 * * *" script-path=hhttps://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
+cron "50 4 0 * * *" script-path=hhttps://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
 
 # > 网易云音乐-浏览器访问并登录: https://music.163.com/m/login
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
+cron "10 5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
 
 # > 携程旅行
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
+cron "30 5 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
 
-# > 百度贴吧
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/sazs34/task/sign_baidu_tieba_v2.js,tag=百度贴吧
+# > 百度贴吧--吃三顿应该饱了
+cron "40 5 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/sazs34/task/sign_baidu_tieba_v2.js,tag=百度贴吧1
+cron "40 6 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/sazs34/task/sign_baidu_tieba_v2.js,tag=百度贴吧2
+cron "40 7 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/sazs34/task/sign_baidu_tieba_v2.js,tag=百度贴吧3
 
 # > 饿了么  
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
+cron "10 8 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
 
 # > 人人视频
-cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
+cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
 
 # > 趣头条
 cron "10 4 0 * * *" script-path= https://raw.githubusercontent.com/chavyleung/scripts/master/qtt/qtt.js,tag=趣头条签到
@@ -53,3 +52,14 @@ cron "10 4 0 * * *" script-path= https://raw.githubusercontent.com/chavyleung/sc
 # > 米读
 cron "10 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/midu/miduSign.js,tag=米读签到
 cron "0 * * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/midu/miduRead.js,tag=米读阅读
+
+# 美团没有外卖
+#打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
+cron "30 8 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js,tag=美团签到
+
+# > 微博 & 微博钱包
+#1.打开微博App获取Cookie.获取后请注释或禁用Cookie
+#2.打开微博钱包点击签到，获取Cookie，
+#3.钱包已经签到无法获取
+cron "50 8 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包签到
+
