--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -27,7 +27,7 @@ cron "10 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 cron "30 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
-cron "50 4 0 * * *" script-path=hhttps://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
+cron "50 4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
 
 # > 网易云音乐-浏览器访问并登录: https://music.163.com/m/login
 cron "10 5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
