--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -3,7 +3,7 @@
 #需配合主机名共同使用
 
 
-hostname = *.xiaoxiao*.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com
+hostname = *.xiaoxiao*.com, *.rr.tv, *.lagoapps.com, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.xiangxiangapps.com, m.pearkin.com, api.meiyan.com,viva.v21xy.com, api.picsart.c*, api.meiease.c*, mp.weixin.qq.com, *.snssdk.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, *.amemv.com, aweme.snssdk.com, ios.prod.ftl.netflix.com, *.115.com, claritywallpaper.com, vsco.co
 
 #破解vip脚本
 # > 小小影视
@@ -28,8 +28,14 @@ http-response ^https:\/\/api\.meiyan\.com\/iap\/verify\.json requires-body=1,max
 # > 小影
 http-response ^https:\/\/viva\.v21xy\.com\/api\/rest\/u\/vip requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/vivavideo.js,tag=小影
 
-# PicsArt美易 pro
+# > PicsArt美易 pro
 http-response ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js,tag=PicsArt美易
+
+# > 克拉壁纸(旧版4.7.3)
+http-response ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/clarity.js,tag=克拉壁纸
+
+# > VSCO滤镜VIP
+http-response ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js,tag=VSCO滤镜
 
 #去广告及水印 评分类
 # > 微信公众号
@@ -37,11 +43,6 @@ http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://Cho
 
 # > 皮皮虾 
 http-response ^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Script/Super.js,tag=皮皮虾去水印广告
-
-# > 微博去广告
-http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js,tag=微博启动广告
-http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,tag=微博广告
-
 
 # > 微博去广告
 http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js,tag=微博启动广告
