--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -46,12 +46,6 @@ cron "10 8 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/Qua
 # > 人人视频
 cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
 
-# > 趣头条
-cron "10 4 0 * * *" script-path= https://raw.githubusercontent.com/chavyleung/scripts/master/qtt/qtt.js,tag=趣头条签到
-
-# > 米读
-cron "10 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/midu/miduSign.js,tag=米读签到
-cron "0 * * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/midu/miduRead.js,tag=米读阅读
 
 # 美团没有外卖
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
@@ -63,3 +57,6 @@ cron "30 8 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 #3.钱包已经签到无法获取
 cron "50 8 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包签到
 
+
+# > 滴滴打车
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
