--- a/Loon_Cookie.conf
+++ b/Loon_Cookie.conf
@@ -62,3 +62,5 @@ http-request ^https:\/\/api\.rr\.tv\/user\/profile script-path=https://raw.githu
 # > WPS获取cookie
 http-request ^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.cookie.js
 
+# > 来客有礼小程序 
+http-request https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\?  script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js
