--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -61,3 +61,6 @@ cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/sc
 
 # > wps(签到时间调整为 06:00 - 13:00 之间)
 cron "9 6 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
+
+# > 来客有礼小程序
+cron "50 0-4/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, tag=来客有礼
