--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -42,6 +42,7 @@ cron "30 6 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/
 
 # > 饿了么  
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
+cron "10 7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js,tag=饿了么打卡
 
 # 美团没有外卖
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
