--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -55,11 +55,13 @@ cron "8 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/ma
 # > 滴滴打车
 cron "30 8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
 
+# > 115摇一摇
+cron "9 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
+
 # > 人人视频
 cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
 
 # > wps(签到时间调整为 06:00 - 13:00 之间)
 cron "9 6 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.js, tag=wps
 
-# > 来客有礼小程序
-cron "50 0-4/1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js, tag=来客有礼
+
