--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -1,6 +1,8 @@
 # 按需求自己选择和修改时间
 # 定时脚本
 
+# > 会话切换
+cron "15,20 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
 
 # > B站直播--打开浏览器访问: https://www.bilibili.com 或 https://live.bilibili.com
 cron "20 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,tag=B站直播
@@ -10,13 +12,13 @@ cron "40 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js,tag=B站漫画
 
 # > 京东--浏览器登录 https://bean.m.jd.com
-cron "30 1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
+cron "30 1,16 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
 
 # > 腾讯视频--手机浏览器访问并登录: https://film.qq.com/
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
 
 # > 爱奇艺
-cron "30 2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "30 2.17 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
