--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -4,6 +4,9 @@
 # > 会话切换
 cron "15,20 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
 
+# > 机场签到
+cron "10 1 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js,tag=机场签到
+
 # > B站直播--打开浏览器访问: https://www.bilibili.com 或 https://live.bilibili.com
 cron "20 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.js,tag=B站直播
 cron "40 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.silver2coin.js,tag=银瓜子转硬币
@@ -12,13 +15,13 @@ cron "40 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bilibili-DailyBonus/Manga.js,tag=B站漫画
 
 # > 京东--浏览器登录 https://bean.m.jd.com
-cron "30 1,16 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
+cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,tag=京东签到
 
 # > 腾讯视频--手机浏览器访问并登录: https://film.qq.com/
-cron "2 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
 
 # > 爱奇艺
-cron "30 2,17 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "30 3,17 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
@@ -26,39 +29,39 @@ cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 # > 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
 #2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-cron "30 3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
+cron "30 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
 
 # > 网易云音乐-浏览器访问并登录: https://music.163.com/m/login
-cron "30 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,tag=网易云签到
 
 # > 携程旅行
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/ctrip.js,tag=携程签到
 
 # > 百度贴吧--吃三顿应该饱了
-cron "30 5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧1
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js,tag=百度贴吧1
 
 # > 饿了么  
-cron "7 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
-cron "10 7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js,tag=饿了么打卡
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js,tag=饿了么签到
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js,tag=饿了么打卡
 
 # 美团没有外卖
 #打开 APP , 然后手动签到 1 次, (`首页` > `红包签到`)
-cron "30 7 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js,tag=美团签到
+cron "6 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js,tag=美团签到
 
 # > 微博 & 微博钱包
 #1.打开微博App获取Cookie.获取后请注释或禁用Cookie
 #2.打开微博钱包点击签到，获取Cookie，
 #3.钱包已经签到无法获取
-cron "8 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包签到
+cron "7 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js,tag=微博&钱包签到
 
 # > 滴滴打车
-cron "30 8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
+cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi.js, tag=滴滴打车
 
 # > 115摇一摇
-cron "9 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
+cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
 
 # > 人人视频
 cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
