--- a/Loon_Task.conf
+++ b/Loon_Task.conf
@@ -2,7 +2,7 @@
 # 定时脚本
 
 # > 会话切换
-cron "15,20 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
+cron "45,48 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js,tag=会话切换
 
 # > 机场签到
 cron "10 1 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js,tag=机场签到
@@ -21,7 +21,7 @@ cron "2 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js,tag=腾讯视频签到
 
 # > 爱奇艺
-cron "30 3,17 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
+cron "42,46 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,tag=爱奇艺签到
 
 # > 苏宁易购
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js,tag=苏宁易购签到
@@ -29,7 +29,7 @@ cron "3 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 # > 中国联通
 #1打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
 #2首页>天天抽奖, 系统提示 `2` 次: `获取Cookie: 成功 (登录抽奖)` 和 `获取Cookie: 成功 (抽奖次数)`
-cron "30 4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
+cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js,tag=中国联通
 
 # > 52破解--浏览器访问并登录https://www.52pojie.cn
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js,tag=52破解签到
@@ -62,6 +62,9 @@ cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/mas
 
 # > 115摇一摇
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, tag=115摇一摇
+
+# > 小黑盒
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, tag=小黑盒
 
 # > 人人视频
 cron "10 10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js,tag=人人签到
