--- a/Loon_Script.conf
+++ b/Loon_Script.conf
@@ -102,5 +102,6 @@ http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness
 http-response ^http:\/\/115\.com\/lx.*$ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/115lx.js,tag=115离线
 http-response ^https?:\/\/webapi\.115\.com\/user\/check_sign.*$ requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/ikanam/Surge-Scripts/master/115lx.js,tag=115离线
 
-
+# > 卧龙影视去启动广告
+http-response http://(w001.tgmmvip.com|api.wolong.tv|.*)/(wolong/ad/(splash|banner)|app/php/api/ad/) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Script/wolongad.js,tag=卧龙影视
 
